# linedetector

./: CMakeLists.txt  README.md
src/: linedetection_image.cpp  linedetector.h
